# rb1_base_sim

./: LICENSE  README.md
docker/: Dockerfile  docker-compose-intel.yml  docker-compose-nvidia.yml  docker-compose.yml  ros-requirements.txt  simulation-in-container-run.data
rb1_base_2dnav/: CHANGELOG.rst  CMakeLists.txt  package.xml
rb1_base_2dnav/config_navigation/diff_drive/: teb_local_planner_params.yaml
rb1_base_2dnav/config_rviz/: move_base.rviz
rb1_base_2dnav/launch/: rb1_base_gmapping.launch
rb1_base_2dnav/launch/navigation_amcl/: amcl_rb1_base.launch  move_base_amcl.launch  move_base_amcl_teb.launch
rb1_base_2dnav/launch/navigation_local/: move_base_local.launch
rb1_base_control/: CHANGELOG.rst  CMakeLists.txt  package.xml
rb1_base_control/config/: rb1_base_a_control.yaml  rb1_base_b_control.yaml  rb1_base_c_control.yaml  rb1_base_c_elev_control.yaml  rb1_base_control.yaml  rb1_base_control_multi1.yaml  rb1_base_control_multi2.yaml
rb1_base_control/launch/: rb1_base_control.launch
rb1_base_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
rb1_base_gazebo/config/: controller.yml
rb1_base_gazebo/launch/: default.launch.py  description.launch.py  gazebo_rviz.launch  rb1_base.launch  rb1_base_gazebo.launch  rb1_base_multi.launch  rb1_base_office.launch  rb1_base_one_robot.launch  rb1_base_visual.launch  rb1_theround.launch  spawn.launch.py  spawn_simulation.launch
rb1_base_gazebo/models/rb1_base_description/meshes/bases/: rb1_base_v3_color.dae
rb1_base_gazebo/models/robotnik_test_ground_v1/: model.config  model.sdf
rb1_base_gazebo/models/robotnik_test_ground_v1/materials/scripts/: ground.material
rb1_base_gazebo/models/robotnik_test_ground_v1/meshes/: robotnik_test_ground_v1.stl
rb1_base_gazebo/rviz/: multi3.rviz  office.rviz  rb1_base.rviz  rb1_base_a.rviz  rb1_base_a_std.rviz
rb1_base_gazebo/worlds/: rb1_base_office.world  robotnik_mcq_test_ground_v1.world
rb1_base_purepursuit/: CHANGELOG.rst  CMakeLists.txt  README  README.md  package.xml
rb1_base_purepursuit/launch/: purepursuit.launch
rb1_base_sim/: CHANGELOG.rst  CMakeLists.txt  package.xml
rb1_base_sim_bringup/: CMakeLists.txt  package.xml
rb1_base_sim_bringup/config/: elevator_fake_pickup_gazebo.yaml
rb1_base_sim_bringup/launch/: rb1_base_complete.launch  rb1_base_move_base_nomap.launch  rb1_base_sim_complete.launch  rb1_dual_ur3_complete.launch  run_one_robot.launch  run_robot.launch  run_rviz.launch  run_simulation.launch
repos/: rb1_base_sim.repos
