<?xml version="1.0"?>
<package>
  <name>rb1_base_2dnav</name>
  <version>1.0.2</version>
  <description>
    This package configures the move_base stack and makes use of the gmapping and amcl algorithms to
    move the rb1_base robot 
  </description>
  
  <maintainer email="rguzman@robotnik.es">Roberto Guzmán</maintainer>
  <maintainer email="rnavarro@robotnik.es">Roman Navarro Garcia </maintainer>
  <maintainer email="aaliques@robotnik.com">Toni Aliques</maintainer>
  <author email="rguzman@robotnik.es">Roberto Guzmán</author>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rb1_base_2dnav</url>
<url type="repository">https://github.com/RobotnikAutomation/rb1_base_sim.git</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/rb1_base_sim/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

    
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>amcl</run_depend>
  <run_depend>robot_pose_ekf</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>tf</run_depend>
     
</package>



