<?xml version="1.0"?>
<package>
  <name>rb1_base_control</name>
  <version>1.0.1</version>
  <description>The rb1_base_control package</description>

  <maintainer email="rguzman@robotnik.es">Roberto Guzmán</maintainer>
  <maintainer email="rnavarro@robotnik.es">Roman Navarro Garcia </maintainer>
  <maintainer email="aaliques@robotnik.com">Toni Aliques</maintainer>

  <author email="rguzman@robotnik.es">Roberto Guzmán</author>

  <license>BSD</license>

<url type="website">http://wiki.ros.org/rb1_base_control</url>
  <url type="repository">https://github.com/RobotnikAutomation/rb1_base_sim</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/rb1_base_sim/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>controller_manager_msgs</run_depend>
  <run_depend>twist_mux</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  
  <export>
    
  </export>
</package>
