<?xml version="1.0"?>
<package>
    <name>rb1_base_gazebo</name>
    <version>1.0.2</version>
    <description>The rb1_base_gazebo package</description>

    <maintainer email="rguzman@robotnik.es">Roberto Guzmán</maintainer>
    <maintainer email="rnavarro@robotnik.es">Roman Navarro Garcia </maintainer>


    <author email="rguzman@robotnik.es">Roberto Guzmán</author>

    <license>BSD</license>

    <url type="website">http://wiki.ros.org/rb1_base_gazebo</url>
    <url type="repository">https://github.com/RobotnikAutomation/rb1_base_sim</url>
    <url type="bugtracker">https://github.com/RobotnikAutomation/rb1_base_sim/issues</url>

    <buildtool_depend>catkin</buildtool_depend>
    
    <build_depend>roscpp</build_depend>
    <build_depend>std_srvs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>gazebo_ros</build_depend>
    <build_depend>rb1_base_control</build_depend>
    <build_depend>rb1_base_description</build_depend> 
    <build_depend>xacro</build_depend>  
    <build_depend>hector_gazebo_plugins</build_depend>
    <build_depend>joint_state_controller</build_depend>
    <build_depend>velocity_controllers</build_depend>
    <build_depend>gazebo_ros_control</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>std_srvs</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>gazebo_ros</run_depend>
    <run_depend>rb1_base_control</run_depend>
    <run_depend>rb1_base_description</run_depend> 
    <run_depend>xacro</run_depend> 
    <run_depend>hector_gazebo_plugins</run_depend> 
    <run_depend>gazebo_plugins</run_depend> 
    <run_depend>joint_state_controller</run_depend> 
    <run_depend>velocity_controllers</run_depend> 
    <run_depend>gazebo_ros_control</run_depend> 

    <export>
        <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
    </export>
</package>
