<?xml version="1.0"?>
<?xml-model
    href="http://download.ros.org/schema/package_format3.xsd"
    schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rb1_base_gazebo</name>
  <version>1.12.0</version>
  <description>
    The rb1_base_gazebo package.
  </description>

  <maintainer email="rguzman@robotnik.es">Roberto Guzmán</maintainer>
  <maintainer email="rnavarro@robotnik.es">Roman Navarro Garcia </maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rb1_base_gazebo</url>
  <url type="repository">https://github.com/RobotnikAutomation/rb1_base_sim</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/rb1_base_sim/issues</url>

  <author email="rguzman@robotnik.es">Roberto Guzmán</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>rb1_base_control</exec_depend>
  <exec_depend>rb1_base_description</exec_depend>
  <exec_depend>rb1_base_pad</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>rviz</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
