<?xml version="1.0"?>
<package>
  <name>rb1_base_sim</name>
  <version>1.0.2</version>
  <description>The rb1_base_sim metapackage</description>

  <maintainer email="rguzman@robotnik.es">Roberto Guzmán</maintainer>
  <maintainer email="rnavarro@robotnik.es">Roman Navarro Garcia </maintainer>
  <maintainer email="aaliques@robotnik.com">Toni Aliques</maintainer>

  <author email="rguzman@robotnik.es">Roberto Guzmán</author>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rb1_base_sim</url>
  <url type="repository">https://github.com/RobotnikAutomation/rb1_base_sim</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/rb1_base_sim/issues</url>


 
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rb1_base_gazebo</run_depend>
  <run_depend>rb1_base_control</run_depend>
  <run_depend>rb1_base_2dnav</run_depend>
  <run_depend>rb1_base_purepursuit</run_depend>

 
  <export>
   
    <metapackage/>
   
  </export>
  
</package>
