<?xml version="1.0"?>
<package>
  <name>rb1_base_sim</name>
  <version>1.12.0</version>
  <description>The rb1_base_sim metapackage</description>

  <maintainer email="rguzman@robotnik.es">Roberto Guzmán</maintainer>
  <maintainer email="asoriano@robotnik.es">Angel Soriano</maintainer>
  <maintainer email="avillena@robotnik.es">Álvaro Villena</maintainer>
  <maintainer email="dredo@robotnik.es">David Redó</maintainer>
  <maintainer email="aarnal@robotnik.es">Alejandro Arnal</maintainer>
  <maintainer email="mbosch@robotnik.es">Marc Bosch</maintainer>
  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>

  <author email="rguzman@robotnik.es">Roberto Guzmán</author>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rb1_base_sim</url>
  <url type="repository">https://github.com/RobotnikAutomation/rb1_base_sim</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/rb1_base_sim/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rb1_base_gazebo</run_depend>
  <run_depend>rb1_base_sim_bringup</run_depend>
 
  <export>
   
    <metapackage/>
   
  </export>
  
</package>
